--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,5 @@
 body {
-    font-family: sans-serif;
+    font-family: "Roboto", sans-serif;
     display: grid;
     height: 100vh;
     grid-template: auto 1fr auto / 1fr auto;
