--- a/styles/place.css
+++ b/styles/place.css
@@ -1,3 +1,8 @@
+:root {
+    --primary-background-color: white;
+    --primary-foreground-color: black;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     display: grid;
@@ -7,7 +12,7 @@ body {
 }
 
 header {
-    background: white;
+    background: var(--primary-background-color);
 }
 
 header h1 {
@@ -15,7 +20,7 @@ header h1 {
 }
 
 main {
-    background: white;
+    background: var(--primary-background-color);
     grid-template: auto 1fr auto / auto 1fr auto;
     overflow: auto;
 }
@@ -32,7 +37,7 @@ main {
 }
 
 .card {
-    background: white;
+    background: var(--primary-background-color);
     opacity: .9;
     margin: 2em;
     padding: 0em 1em 1em 1em;
@@ -72,7 +77,7 @@ td.value {
 }
 
 footer {
-    background: white;
+    background: var(--primary-background-color);
     padding: 1rem;
     text-align: center;
 }
