--- a/styles/form.css
+++ b/styles/form.css
@@ -20,7 +20,7 @@ main {
     padding: 1em;
 }
 
-label {
+label, legend {
     font-weight: bold;
     display: block;
     margin-bottom: .5em;
@@ -30,7 +30,7 @@ label {
 fieldset {
     border: none;
     padding: 0;
-    margin: 0;
+    margin: 1em 0 0 0;
 }
 
 #product, #date {
@@ -39,8 +39,9 @@ fieldset {
     width: -webkit-fill-available;
 }
 
-#rating {
+.stars {
     display: flex;
+    flex-direction: row;
 }
 
 .star {
